# graphRAG

./: .env.example  .gitignore  Dockerfile  README.md  USER_GUIDE.md  docker-compose.yml  prd.md  pyproject.toml
config/: settings.py
scripts/: seed_mock_data.py  sync_data.py
src/: __init__.py
src/api/: dependencies.py  main.py
src/api/models/: __init__.py  auth.py  client.py  query.py  report.py
src/api/routes/: __init__.py  auth.py  connections.py  dashboard.py  ingest.py  query.py  reports.py  scheduler.py
src/connectors/: __init__.py  base.py  google_ads.py  meta_ads.py  mock_data.py
src/graph/: __init__.py  client.py  ingest.py  queries.py  schema.py
src/rag/: __init__.py  confidence.py  engine.py  prompts.py  retrieval.py
src/services/: __init__.py  audit.py  notifications.py  reports.py  scheduler.py
src/ui/: app.py
tests/: __init__.py  conftest.py
tests/unit/: test_api.py  test_connectors.py  test_graph.py  test_rag.py
